@@ -684,6 +684,7 @@
                 <p>Since this is a relation of linear dependence on the linearly independent set <m>S</m>, we can conclude that<md>
                     <mrow>a_1&amp;=0&amp;a_2&amp;=0&amp;a_3&amp;=0&amp;\ldots&amp;&amp;a_t&amp;=0</mrow>
                 </md>and this establishes that <m>R</m> is a linearly independent set.</p>
+                <p>It is instructive to compare the proof of this theorem with the solution to <xref ref="exercise-MM-T80"/>.</p>
             </proof>
         </theorem>
         <theorem xml:id="theorem-ILTB" acro="ILTB">
