@@ -1434,5 +1434,27 @@
             </md>.  By <xref ref="definition-HS" acro="HS"/> we see that <m>\linearsystem{A}{\vect{b}}</m> is homogeneous.</p>
             </solution>
         </exercise>
+        <exercise number="T80" xml:id="exercise-MM-T80">
+            <statement>
+                <p>Suppose that <m>A</m> is a nonsingular matrix of size <m>n</m>.  Let <m>T=\set{\vectorlist{x}{m}}\subseteq\complex{n}</m> be a linearly independent set of vectors.  Prove that
+                <me>R = \set{A\vect{x}_1,\,A\vect{x}_2,\,A\vect{x}_3,\,\ldots,\,A\vect{x}_m}\subseteq\complex{n}</me>
+                is a linearly independent set.</p>
+            </statement>
+            <solution xml:id="solution-MM-T80">
+                <p>Begin with a relation of linear dependence on the set <m>R</m>.
+                <md>
+                    <mrow>\zerovector
+                          &amp;=a_1A\vect{x}_1 + a_2A\vect{x}_2 + a_3A\vect{x}_3 + \cdots + a_mA\vect{x}_m &amp;&amp;<xref ref="definition-RLDCV"/></mrow>
+                    <mrow>&amp;=Aa_1\vect{x}_1 + Aa_2\vect{x}_2 + Aa_3\vect{x}_3 + \cdots + Aa_m\vect{x}_m &amp;&amp;<xref ref="theorem-MMSMM"/></mrow>
+                    <mrow>&amp;=A\left(a_1\vect{x}_1 + a_2\vect{x}_2 + a_3\vect{x}_3 + \cdots + a_m\vect{x}_m\right) &amp;&amp;<xref ref="theorem-MMDAA"/></mrow>
+                </md>
+                In light of <xref ref="theorem-SLEMM"/>, we can think of this equation as a homogeneous system of equations with <m>A</m> as the coefficient matrix.  Then because <m>A</m> is nonsingular, <xref ref="definition-NM"/> implies
+                <me>a_1\vect{x}_1 + a_2\vect{x}_2 + a_3\vect{x}_3 + \cdots + a_m\vect{x}_m = \zerovector</me>.
+                This is a relation of linear dependence on <m>T</m>, a linearly independent set, so by <xref ref="definition-LICV"/>,
+                <me>a_1=a_2=a_3=\cdots=a_m=0</me>.
+                This means there is only a trivial relation of linear dependence on <m>R</m>, so again by <xref ref="definition-LICV"/> we can conclude that <m>R</m> is linearly independent.</p>
+            </solution>
+        </exercise>
+        <!-- There is a similar T81 about spanning sets but it might belong in Section CRS? -->
     </exercises>
 </section>
